Completed Modal Functionality and fixed reveal on scroll scaling overflow

--- a/app/assets/styles/modules/_modal.css
+++ b/app/assets/styles/modules/_modal.css
@@ -7,6 +7,14 @@
   left: 0;
   z-index: 5;
   color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s ease-out;
+
+  &--is-visible{
+    opacity: 1;
+    visibility: visible;
+  }
 
   &__inner{
     position: absolute;
