--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,4 +1,5 @@
 .page-section{
+  overflow: hidden;
   padding: 2rem 0;
 
   @mixin atMedium{
